force-app/main/default/objects/Lobby_Visitor__c/Lobby_Visitor__c.object-meta.xml
<CustomObject>
    <label>Lobby Visitor</label>
    <nameField>
        <displayFormat>LV-{000000000}</displayFormat>
        <label>LV Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lobby Visitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>