force-app/main/default/objects/Lobby_Visitor__c/fields/Actual_Wait_Time_Min__c.field-meta.xml
<CustomField>
    <fullName>Actual_Wait_Time_Min__c</fullName>
    <description>IF(Exit_Time__c != null, ((Exit_Time__c - Entry_Time__c)*24*60), ((NOW() - Entry_Time__c)*24*60))</description>
    <formula>IF(NOT(ISBLANK(Exit_Time__c)), ((Exit_Time__c - Entry_Time__c)*24*60), ((NOW() - Entry_Time__c)*24*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Wait Time (Min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>