force-app/main/default/objects/Lobby_Visitor__c/fields/Do_You_Have_An_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Have_An_Appointment__c</fullName>
    <label>Do You Have An Appointment?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>