force-app/main/default/objects/Lobby_Visitor__c/fields/Entry_Time__c.field-meta.xml
<CustomField>
    <fullName>Entry_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Entry Time</label>
    <type>DateTime</type>
</CustomField>