force-app/main/default/objects/Lobby_Visitor__c/fields/Estimated_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Wait_Time__c</fullName>
    <label>Estimated Wait Time (mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>