force-app/main/default/objects/Lobby_Visitor__c/fields/Exit_Time__c.field-meta.xml
<CustomField>
    <fullName>Exit_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exit Time</label>
    <type>DateTime</type>
</CustomField>