force-app/main/default/objects/Lobby_Visitor__c/fields/Reason_For_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Visit__c</fullName>
    <label>Reason For Visit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open an Account</fullName>
            </value>
            <value>
                <fullName>Service an Existing Account</fullName>
            </value>
            <value>
                <fullName>Apply for a Loan</fullName>
            </value>
            <value>
                <fullName>Apply for a Mortgage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>