force-app/main/default/objects/Lobby_Visitor__c/fields/Waiting_Time__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Time__c</fullName>
    <formula>IF(NOT(ISBLANK(Exit_Time__c)), ((Exit_Time__c - Entry_Time__c)*24*60*60), ((NOW() - Entry_Time__c)*24*60*60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waiting Time (Sec)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>