force-app/main/default/objects/Lobby_Visitor__c/fields/Who_Is_The_Appointment_With__c.field-meta.xml
<CustomField>
    <fullName>Who_Is_The_Appointment_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who Is The Appointment With?</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lobby_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>