force-app/main/default/objects/Lobby_Visitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Branch__c</columns>
    <columns>Entry_Time__c</columns>
    <columns>Exit_Time__c</columns>
    <columns>Waiting_Time__c</columns>
    <columns>Reason_For_Visit__c</columns>
    <columns>Do_You_Have_An_Appointment__c</columns>
    <columns>Who_Is_The_Appointment_With__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>